Add external taskdef dependencies for Windows build

--- a/.gitattributes
+++ b/.gitattributes
@@ -1347,6 +1347,8 @@ lib/commons-logging-1.1.1.jar -text
 lib/commons-net-ftp-2.0.jar -text
 lib/dns_sd.jar -text
 lib/dom4j-1.6.1.jar -text
+lib/ext/ant-contrib-1.0b3.jar -text
+lib/ext/ant-dotnet-1.0.jar -text
 lib/ext/junit-4.6.jar -text
 lib/gdata-client-1.0.jar -text
 lib/gdata-client-meta-1.0.jar -text
