--- a/.gitattributes
+++ b/.gitattributes
@@ -1361,7 +1361,7 @@ lib/gdata-spreadsheet-meta-3.0.jar -text
 lib/google-collect-1.0.jar -text
 lib/httpclient-4.0.1.jar -text
 lib/httpcore-4.0.1.jar -text
-lib/icu4j-3.6.1.jar -text
+lib/icu4j-module-4.4.1.1.jar -text
 lib/jakarta-oro-2.0.8.jar -text
 lib/jakarta-slide-webdavlib-2.2-dev.jar -text
 lib/java-xmlbuilder-0.4.jar -text
