--- a/.gitattributes
+++ b/.gitattributes
@@ -1332,6 +1332,8 @@ lib/StructureMap.AutoMocking.xml -text
 lib/StructureMap.dll -text
 lib/StructureMap.xml -text
 lib/System.Core.dll -text
+lib/VistaBridgeLibrary.dll -text
+lib/Windows7.DesktopIntegration.dll -text
 lib/activation-1.1.1.jar -text
 lib/asm-3.3.jar -text
 lib/backport-util-concurrent-3.1.jar -text
