--- a/.gitattributes
+++ b/.gitattributes
@@ -1353,6 +1353,7 @@ lib/dns_sd.jar -text
 lib/dom4j-1.6.1.jar -text
 lib/ext/ant-contrib-1.0b3.jar -text
 lib/ext/ant-dotnet-1.0.jar -text
+lib/ext/ant-ikvmc.0.5.jar -text
 lib/ext/junit-4.6.jar -text
 lib/gdata-client-1.0.jar -text
 lib/gdata-client-meta-1.0.jar -text
