--- a/.gitattributes
+++ b/.gitattributes
@@ -2444,6 +2444,9 @@ sv.lproj/Prompt.strings -text svneol=unset#text/utf-16
 sv.lproj/S3.strings -text svneol=unset#text/utf-16
 sv.lproj/Status.strings -text svneol=unset#text/utf-16
 sv.lproj/Transfer.strings -text svneol=unset#text/utf-16
+test/ch/cyberduck/Properties/AssemblyInfo.cs -text
+test/ch/cyberduck/Test.csproj -text
+test/ch/cyberduck/ui/controller/LocalImplTest.cs -text svneol=unset#application/octet-stream
 th.lproj/Alert.nib/classes.nib -text
 th.lproj/Alert.nib/info.nib -text
 th.lproj/Alert.nib/keyedobjects.nib -text
