Add Dropbox disk and icon images

--- a/.gitattributes
+++ b/.gitattributes
@@ -775,6 +775,8 @@ img/download6.icns -text
 img/download7.icns -text
 img/download8.icns -text
 img/download9.icns -text
+img/dropbox-icon.png -text svneol=unset#image/png
+img/dropbox.icns -text
 img/dropfolderbadge.png -text svneol=unset#image/png
 img/edit.tiff -text svneol=unset#image/tiff
 img/editPressed.tiff -text svneol=unset#image/tiff
