--- a/.gitattributes
+++ b/.gitattributes
@@ -2077,6 +2077,7 @@ source/ch/cyberduck/core/s3/S3Session.java -text
 source/ch/cyberduck/core/sftp/HostKeyController.java -text
 source/ch/cyberduck/core/sftp/MemoryHostKeyVerifier.java -text
 source/ch/cyberduck/core/sftp/PreferencesHostKeyVerifier.java -text
+source/ch/cyberduck/core/sparkle/Updater.java -text
 source/ch/cyberduck/core/ssl/AbstractX509TrustManager.java -text
 source/ch/cyberduck/core/ssl/SSLSession.java -text
 source/ch/cyberduck/properties/Settings.Designer.cs -text
