Option to disable natural language date formatting.

--- a/.gitattributes
+++ b/.gitattributes
@@ -2084,6 +2084,7 @@ source/ch/cyberduck/properties/Settings.Designer.cs -text
 source/ch/cyberduck/properties/Settings.cs -text
 source/ch/cyberduck/properties/Settings.settings -text
 source/ch/cyberduck/properties/app.manifest -text
+source/ch/cyberduck/ui/AbstractDateFormatter.java -text
 source/ch/cyberduck/ui/FileTypeComparator.java -text
 source/ch/cyberduck/ui/FilenameComparator.java -text
 source/ch/cyberduck/ui/GroupComparator.java -text
