--- a/.gitattributes
+++ b/.gitattributes
@@ -829,6 +829,9 @@ img/statusGreen.tiff -text svneol=unset#image/tiff
 img/statusRed.tiff -text svneol=unset#image/tiff
 img/statusYellow.tiff -text svneol=unset#image/tiff
 img/stop.tiff -text svneol=unset#image/tiff
+img/swift-icon.png -text svneol=unset#image/png
+img/swift.icns -text
+img/swift.ico -text
 img/sync.tiff -text svneol=unset#image/tiff
 img/throbber.gif -text
 img/throbber_small.gif -text
