--- a/.gitattributes
+++ b/.gitattributes
@@ -1860,6 +1860,8 @@ ru.lproj/Prompt.strings -text svneol=unset#text/utf-16
 ru.lproj/S3.strings -text svneol=unset#text/utf-16
 ru.lproj/Status.strings -text svneol=unset#text/utf-16
 ru.lproj/Transfer.strings -text svneol=unset#text/utf-16
+setup/Bonjour.msi -text
+setup/Bonjour64.msi -text
 setup/FileAssociation.nsh -text
 setup/cyberduck.nsi -text
 setup/header.bmp -text
