--- a/.gitattributes
+++ b/.gitattributes
@@ -1300,6 +1300,7 @@ lib/activation-1.1.1.jar -text
 lib/apache-mime4j-0.6.jar -text
 lib/asm-3.3.jar -text
 lib/backport-util-concurrent-3.1.jar -text
+lib/bcmail-jdk15-145.jar -text
 lib/bcprov-jdk15-145.jar -text
 lib/cglib-2.2.jar -text
 lib/cloudfiles-1.5.3.jar -text
