Localizations for service menu entry

--- a/.gitattributes
+++ b/.gitattributes
@@ -57,6 +57,7 @@ ca.lproj/Preferences.strings -text svneol=unset#text/utf-16
 ca.lproj/Prompt.nib/keyedobjects.nib -text
 ca.lproj/Prompt.strings -text svneol=unset#text/utf-16
 ca.lproj/S3.strings -text svneol=unset#text/utf-16
+ca.lproj/ServicesMenu.strings -text svneol=unset#text/utf-16
 ca.lproj/Status.strings -text svneol=unset#text/utf-16
 ca.lproj/Transfer.strings -text svneol=unset#text/utf-16
 cs.lproj/Alert.nib/classes.nib -text
@@ -107,6 +108,7 @@ cs.lproj/Preferences.strings -text svneol=unset#text/utf-16
 cs.lproj/Prompt.nib/keyedobjects.nib -text
 cs.lproj/Prompt.strings -text svneol=unset#text/utf-16
 cs.lproj/S3.strings -text svneol=unset#text/utf-16
+cs.lproj/ServicesMenu.strings -text svneol=unset#text/utf-16
 cs.lproj/Status.strings -text svneol=unset#text/utf-16
 cs.lproj/Transfer.strings -text svneol=unset#text/utf-16
 cy.lproj/Alert.nib/classes.nib -text
@@ -157,6 +159,7 @@ cy.lproj/Preferences.strings -text svneol=unset#text/utf-16
 cy.lproj/Prompt.nib/keyedobjects.nib -text
 cy.lproj/Prompt.strings -text svneol=unset#text/utf-16
 cy.lproj/S3.strings -text svneol=unset#text/utf-16
+cy.lproj/ServicesMenu.strings -text svneol=unset#text/utf-16
 cy.lproj/Status.strings -text svneol=unset#text/utf-16
 cy.lproj/Transfer.strings -text svneol=unset#text/utf-16
 /cyberduck-application.icns -text svneol=unset#image/icns
@@ -212,6 +215,7 @@ da.lproj/Preferences.strings -text svneol=unset#text/utf-16
 da.lproj/Prompt.nib/keyedobjects.nib -text
 da.lproj/Prompt.strings -text svneol=unset#text/utf-16
 da.lproj/S3.strings -text svneol=unset#text/utf-16
+da.lproj/ServicesMenu.strings -text svneol=unset#text/utf-16
 da.lproj/Status.strings -text svneol=unset#text/utf-16
 da.lproj/Transfer.strings -text svneol=unset#text/utf-16
 de.lproj/Alert.nib/classes.nib -text
@@ -262,6 +266,7 @@ de.lproj/Preferences.strings -text svneol=unset#text/utf-16
 de.lproj/Prompt.nib/keyedobjects.nib -text
 de.lproj/Prompt.strings -text svneol=unset#text/utf-16
 de.lproj/S3.strings -text svneol=unset#text/utf-16
+de.lproj/ServicesMenu.strings -text svneol=unset#text/utf-16
 de.lproj/Status.strings -text svneol=unset#text/utf-16
 de.lproj/Transfer.strings -text svneol=unset#text/utf-16
 el.lproj/Alert.nib/classes.nib -text
@@ -343,6 +348,7 @@ el.lproj/Prompt.nib/info.nib -text
 el.lproj/Prompt.nib/keyedobjects.nib -text
 el.lproj/Prompt.strings -text svneol=unset#text/utf-16
 el.lproj/S3.strings -text svneol=unset#text/utf-16
+el.lproj/ServicesMenu.strings -text svneol=unset#text/utf-16
 el.lproj/Status.strings -text svneol=unset#text/utf-16
 el.lproj/Transfer.strings -text svneol=unset#text/utf-16
 en.lproj/Alert.nib/classes.nib -text
@@ -393,6 +399,7 @@ en.lproj/Preferences.strings -text svneol=unset#text/utf-16
 en.lproj/Prompt.nib/keyedobjects.nib -text
 en.lproj/Prompt.strings -text svneol=unset#text/utf-16
 en.lproj/S3.strings -text svneol=unset#text/utf-16
+en.lproj/ServicesMenu.strings -text svneol=unset#text/utf-16
 en.lproj/Status.strings -text svneol=unset#text/utf-16
 en.lproj/Transfer.strings -text svneol=unset#text/utf-16
 es.lproj/Alert.nib/classes.nib -text
@@ -443,6 +450,7 @@ es.lproj/Preferences.strings -text svneol=unset#text/utf-16
 es.lproj/Prompt.nib/keyedobjects.nib -text
 es.lproj/Prompt.strings -text svneol=unset#text/utf-16
 es.lproj/S3.strings -text svneol=unset#text/utf-16
+es.lproj/ServicesMenu.strings -text svneol=unset#text/utf-16
 es.lproj/Status.strings -text svneol=unset#text/utf-16
 es.lproj/Transfer.strings -text svneol=unset#text/utf-16
 fi.lproj/Alert.nib/classes.nib -text
@@ -493,6 +501,7 @@ fi.lproj/Preferences.strings -text svneol=unset#text/utf-16
 fi.lproj/Prompt.nib/keyedobjects.nib -text
 fi.lproj/Prompt.strings -text svneol=unset#text/utf-16
 fi.lproj/S3.strings -text svneol=unset#text/utf-16
+fi.lproj/ServicesMenu.strings -text svneol=unset#text/utf-16
 fi.lproj/Status.strings -text svneol=unset#text/utf-16
 fi.lproj/Transfer.strings -text svneol=unset#text/utf-16
 fr.lproj/Alert.nib/classes.nib -text
@@ -543,6 +552,7 @@ fr.lproj/Preferences.strings -text svneol=unset#text/utf-16
 fr.lproj/Prompt.nib/keyedobjects.nib -text
 fr.lproj/Prompt.strings -text svneol=unset#text/utf-16
 fr.lproj/S3.strings -text svneol=unset#text/utf-16
+fr.lproj/ServicesMenu.strings -text svneol=unset#text/utf-16
 fr.lproj/Status.strings -text svneol=unset#text/utf-16
 fr.lproj/Transfer.strings -text svneol=unset#text/utf-16
 he.lproj/Alert.nib/classes.nib -text
@@ -623,6 +633,7 @@ he.lproj/Prompt.nib/info.nib -text
 he.lproj/Prompt.nib/keyedobjects.nib -text
 he.lproj/Prompt.strings -text svneol=unset#text/utf-16
 he.lproj/S3.strings -text svneol=unset#text/utf-16
+he.lproj/ServicesMenu.strings -text svneol=unset#text/utf-16
 he.lproj/Status.strings -text svneol=unset#text/utf-16
 he.lproj/Transfer.strings -text svneol=unset#text/utf-16
 hu.lproj/Alert.nib/classes.nib -text
@@ -673,6 +684,7 @@ hu.lproj/Preferences.strings -text svneol=unset#text/utf-16
 hu.lproj/Prompt.nib/keyedobjects.nib -text
 hu.lproj/Prompt.strings -text svneol=unset#text/utf-16
 hu.lproj/S3.strings -text svneol=unset#text/utf-16
+hu.lproj/ServicesMenu.strings -text svneol=unset#text/utf-16
 hu.lproj/Status.strings -text svneol=unset#text/utf-16
 hu.lproj/Transfer.strings -text svneol=unset#text/utf-16
 id.lproj/Alert.nib/classes.nib -text
@@ -723,6 +735,7 @@ id.lproj/Preferences.strings -text svneol=unset#text/utf-16
 id.lproj/Prompt.nib/keyedobjects.nib -text
 id.lproj/Prompt.strings -text svneol=unset#text/utf-16
 id.lproj/S3.strings -text svneol=unset#text/utf-16
+id.lproj/ServicesMenu.strings -text svneol=unset#text/utf-16
 id.lproj/Status.strings -text svneol=unset#text/utf-16
 id.lproj/Transfer.strings -text svneol=unset#text/utf-16
 img/NSDotMac.png -text
@@ -889,6 +902,7 @@ it.lproj/Preferences.strings -text svneol=unset#text/utf-16
 it.lproj/Prompt.nib/keyedobjects.nib -text
 it.lproj/Prompt.strings -text svneol=unset#text/utf-16
 it.lproj/S3.strings -text svneol=unset#text/utf-16
+it.lproj/ServicesMenu.strings -text svneol=unset#text/utf-16
 it.lproj/Status.strings -text svneol=unset#text/utf-16
 it.lproj/Transfer.strings -text svneol=unset#text/utf-16
 ja.lproj/Alert.nib/classes.nib -text
@@ -940,6 +954,7 @@ ja.lproj/Preferences.strings -text svneol=unset#text/utf-16
 ja.lproj/Prompt.nib/keyedobjects.nib -text
 ja.lproj/Prompt.strings -text svneol=unset#text/utf-16
 ja.lproj/S3.strings -text svneol=unset#text/utf-16
+ja.lproj/ServicesMenu.strings -text svneol=unset#text/utf-16
 ja.lproj/Status.strings -text svneol=unset#text/utf-16
 ja.lproj/Transfer.strings -text svneol=unset#text/utf-16
 ka.lproj/Alert.nib/classes.nib -text
@@ -1020,6 +1035,7 @@ ka.lproj/Prompt.nib/info.nib -text
 ka.lproj/Prompt.nib/keyedobjects.nib -text
 ka.lproj/Prompt.strings -text svneol=unset#text/utf-16
 ka.lproj/S3.strings -text svneol=unset#text/utf-16
+ka.lproj/ServicesMenu.strings -text svneol=unset#text/utf-16
 ka.lproj/Status.strings -text svneol=unset#text/utf-16
 ka.lproj/Transfer.strings -text svneol=unset#text/utf-16
 ko.lproj/Alert.nib/classes.nib -text
@@ -1070,6 +1086,7 @@ ko.lproj/Preferences.strings -text svneol=unset#text/utf-16
 ko.lproj/Prompt.nib/keyedobjects.nib -text
 ko.lproj/Prompt.strings -text svneol=unset#text/utf-16
 ko.lproj/S3.strings -text svneol=unset#text/utf-16
+ko.lproj/ServicesMenu.strings -text svneol=unset#text/utf-16
 ko.lproj/Status.strings -text svneol=unset#text/utf-16
 ko.lproj/Transfer.strings -text svneol=unset#text/utf-16
 lib/AutomaticUpdater.dll -text
@@ -1429,6 +1446,7 @@ lv.lproj/Prompt.nib/info.nib -text
 lv.lproj/Prompt.nib/keyedobjects.nib -text
 lv.lproj/Prompt.strings -text svneol=unset#text/utf-16
 lv.lproj/S3.strings -text svneol=unset#text/utf-16
+lv.lproj/ServicesMenu.strings -text svneol=unset#text/utf-16
 lv.lproj/Status.strings -text svneol=unset#text/utf-16
 lv.lproj/Transfer.strings -text svneol=unset#text/utf-16
 nl.lproj/Alert.nib/classes.nib -text
@@ -1479,6 +1497,7 @@ nl.lproj/Preferences.strings -text svneol=unset#text/utf-16
 nl.lproj/Prompt.nib/keyedobjects.nib -text
 nl.lproj/Prompt.strings -text svneol=unset#text/utf-16
 nl.lproj/S3.strings -text svneol=unset#text/utf-16
+nl.lproj/ServicesMenu.strings -text svneol=unset#text/utf-16
 nl.lproj/Status.strings -text svneol=unset#text/utf-16
 nl.lproj/Transfer.strings -text svneol=unset#text/utf-16
 no.lproj/Alert.nib/classes.nib -text
@@ -1529,6 +1548,7 @@ no.lproj/Preferences.strings -text svneol=unset#text/utf-16
 no.lproj/Prompt.nib/keyedobjects.nib -text
 no.lproj/Prompt.strings -text svneol=unset#text/utf-16
 no.lproj/S3.strings -text svneol=unset#text/utf-16
+no.lproj/ServicesMenu.strings -text svneol=unset#text/utf-16
 no.lproj/Status.strings -text svneol=unset#text/utf-16
 no.lproj/Transfer.strings -text svneol=unset#text/utf-16
 pl.lproj/Alert.nib/classes.nib -text
@@ -1580,6 +1600,7 @@ pl.lproj/Preferences.strings -text svneol=unset#text/utf-16
 pl.lproj/Prompt.nib/keyedobjects.nib -text
 pl.lproj/Prompt.strings -text svneol=unset#text/utf-16
 pl.lproj/S3.strings -text svneol=unset#text/utf-16
+pl.lproj/ServicesMenu.strings -text svneol=unset#text/utf-16
 pl.lproj/Status.strings -text svneol=unset#text/utf-16
 pl.lproj/Transfer.strings -text svneol=unset#text/utf-16
 pt_BR.lproj/Alert.nib/classes.nib -text
@@ -1661,6 +1682,7 @@ pt_BR.lproj/Prompt.nib/info.nib -text
 pt_BR.lproj/Prompt.nib/keyedobjects.nib -text
 pt_BR.lproj/Prompt.strings -text svneol=unset#text/utf-16
 pt_BR.lproj/S3.strings -text svneol=unset#text/utf-16
+pt_BR.lproj/ServicesMenu.strings -text svneol=unset#text/utf-16
 pt_BR.lproj/Status.strings -text svneol=unset#text/utf-16
 pt_BR.lproj/Transfer.strings -text svneol=unset#text/utf-16
 pt_PT.lproj/Alert.nib/classes.nib -text
@@ -1711,6 +1733,7 @@ pt_PT.lproj/Preferences.strings -text svneol=unset#text/utf-16
 pt_PT.lproj/Prompt.nib/keyedobjects.nib -text
 pt_PT.lproj/Prompt.strings -text svneol=unset#text/utf-16
 pt_PT.lproj/S3.strings -text svneol=unset#text/utf-16
+pt_PT.lproj/ServicesMenu.strings -text svneol=unset#text/utf-16
 pt_PT.lproj/Status.strings -text svneol=unset#text/utf-16
 pt_PT.lproj/Transfer.strings -text svneol=unset#text/utf-16
 resources/Activity.nib/classes.nib -text
@@ -1809,6 +1832,7 @@ ro.lproj/Prompt.nib/info.nib -text
 ro.lproj/Prompt.nib/keyedobjects.nib -text
 ro.lproj/Prompt.strings -text svneol=unset#text/utf-16
 ro.lproj/S3.strings -text svneol=unset#text/utf-16
+ro.lproj/ServicesMenu.strings -text svneol=unset#text/utf-16
 ro.lproj/Status.strings -text svneol=unset#text/utf-16
 ro.lproj/Transfer.strings -text svneol=unset#text/utf-16
 ru.lproj/Alert.nib/classes.nib -text
@@ -1859,6 +1883,7 @@ ru.lproj/Preferences.strings -text svneol=unset#text/utf-16
 ru.lproj/Prompt.nib/keyedobjects.nib -text
 ru.lproj/Prompt.strings -text svneol=unset#text/utf-16
 ru.lproj/S3.strings -text svneol=unset#text/utf-16
+ru.lproj/ServicesMenu.strings -text svneol=unset#text/utf-16
 ru.lproj/Status.strings -text svneol=unset#text/utf-16
 ru.lproj/Transfer.strings -text svneol=unset#text/utf-16
 setup/Bonjour.msi -text
@@ -1916,6 +1941,7 @@ sk.lproj/Preferences.strings -text svneol=unset#text/utf-16
 sk.lproj/Prompt.nib/keyedobjects.nib -text
 sk.lproj/Prompt.strings -text svneol=unset#text/utf-16
 sk.lproj/S3.strings -text svneol=unset#text/utf-16
+sk.lproj/ServicesMenu.strings -text svneol=unset#text/utf-16
 sk.lproj/Status.strings -text svneol=unset#text/utf-16
 sk.lproj/Transfer.strings -text svneol=unset#text/utf-16
 sl.lproj/Alert.nib/classes.nib -text
@@ -1996,6 +2022,7 @@ sl.lproj/Prompt.nib/info.nib -text
 sl.lproj/Prompt.nib/keyedobjects.nib -text
 sl.lproj/Prompt.strings -text svneol=unset#text/utf-16
 sl.lproj/S3.strings -text svneol=unset#text/utf-16
+sl.lproj/ServicesMenu.strings -text svneol=unset#text/utf-16
 sl.lproj/Status.strings -text svneol=unset#text/utf-16
 sl.lproj/Transfer.strings -text svneol=unset#text/utf-16
 source/ch/cyberduck/App.config -text
@@ -2395,6 +2422,7 @@ sr.lproj/Prompt.nib/info.nib -text
 sr.lproj/Prompt.nib/keyedobjects.nib -text
 sr.lproj/Prompt.strings -text svneol=unset#text/utf-16
 sr.lproj/S3.strings -text svneol=unset#text/utf-16
+sr.lproj/ServicesMenu.strings -text svneol=unset#text/utf-16
 sr.lproj/Status.strings -text svneol=unset#text/utf-16
 sr.lproj/Transfer.strings -text svneol=unset#text/utf-16
 sv.lproj/Alert.nib/classes.nib -text
@@ -2445,6 +2473,7 @@ sv.lproj/Preferences.strings -text svneol=unset#text/utf-16
 sv.lproj/Prompt.nib/keyedobjects.nib -text
 sv.lproj/Prompt.strings -text svneol=unset#text/utf-16
 sv.lproj/S3.strings -text svneol=unset#text/utf-16
+sv.lproj/ServicesMenu.strings -text svneol=unset#text/utf-16
 sv.lproj/Status.strings -text svneol=unset#text/utf-16
 sv.lproj/Transfer.strings -text svneol=unset#text/utf-16
 test/ch/cyberduck/Properties/AssemblyInfo.cs -text
@@ -2530,6 +2559,7 @@ th.lproj/Prompt.nib/info.nib -text
 th.lproj/Prompt.nib/keyedobjects.nib -text
 th.lproj/Prompt.strings -text svneol=unset#text/utf-16
 th.lproj/S3.strings -text svneol=unset#text/utf-16
+th.lproj/ServicesMenu.strings -text svneol=unset#text/utf-16
 th.lproj/Status.strings -text svneol=unset#text/utf-16
 th.lproj/Transfer.strings -text svneol=unset#text/utf-16
 tr.lproj/Alert.nib/classes.nib -text
@@ -2610,6 +2640,7 @@ tr.lproj/Prompt.nib/info.nib -text
 tr.lproj/Prompt.nib/keyedobjects.nib -text
 tr.lproj/Prompt.strings -text svneol=unset#text/utf-16
 tr.lproj/S3.strings -text svneol=unset#text/utf-16
+tr.lproj/ServicesMenu.strings -text svneol=unset#text/utf-16
 tr.lproj/Status.strings -text svneol=unset#text/utf-16
 tr.lproj/Transfer.strings -text svneol=unset#text/utf-16
 www/crash/crash.py -text
@@ -2701,6 +2732,7 @@ zh_CN.lproj/Preferences.strings -text svneol=unset#text/utf-16
 zh_CN.lproj/Prompt.nib/keyedobjects.nib -text
 zh_CN.lproj/Prompt.strings -text svneol=unset#text/utf-16
 zh_CN.lproj/S3.strings -text svneol=unset#text/utf-16
+zh_CN.lproj/ServicesMenu.strings -text svneol=unset#text/utf-16
 zh_CN.lproj/Status.strings -text svneol=unset#text/utf-16
 zh_CN.lproj/Transfer.strings -text svneol=unset#text/utf-16
 zh_TW.lproj/Alert.nib/classes.nib -text
@@ -2751,5 +2783,6 @@ zh_TW.lproj/Preferences.strings -text svneol=unset#text/utf-16
 zh_TW.lproj/Prompt.nib/keyedobjects.nib -text
 zh_TW.lproj/Prompt.strings -text svneol=unset#text/utf-16
 zh_TW.lproj/S3.strings -text svneol=unset#text/utf-16
+zh_TW.lproj/ServicesMenu.strings -text svneol=unset#text/utf-16
 zh_TW.lproj/Status.strings -text svneol=unset#text/utf-16
 zh_TW.lproj/Transfer.strings -text svneol=unset#text/utf-16
