--- a/.gitattributes
+++ b/.gitattributes
@@ -1753,6 +1753,7 @@ source/ch/cyberduck/core/NativeMethods.cs -text
 source/ch/cyberduck/core/NaturalOrderComparator.java -text
 source/ch/cyberduck/core/OSVersion.cs -text
 source/ch/cyberduck/core/Protocol.java -text
+source/ch/cyberduck/core/ProtocolFactory.java -text
 source/ch/cyberduck/core/RFC2253.cs -text
 source/ch/cyberduck/core/Rendezvous.cs -text
 source/ch/cyberduck/core/Rendezvous.java -text
